# terraform_projects

./: .gitignore  LICENSE  README.md
bedrock-lambda/: Dockerfile  README.md  pyproject.toml
bedrock-lambda/lambda/: app.py
bedrock-lambda/lambda/libs/: conversation.py  prompts.py
bedrock-lambda/terraform/: .terraform.lock.hcl  api_gateway.tf  data.tf  ecr.tf  iam.tf  lambda.tf  outputs.tf  provider.tf
bedrock-lambda/terraform/templates/: request_template.json
bedrock-lambda/ui/: get_terraform_outputs.py  gradio_app.py
boostrap/: .terraform.lock.hcl  README.md  provider.tf  s3.tf
ecs-cluster/: README.md  cdk_mlflow.py
ecs-cluster/terraform/: ecs.tf  iam.tf  networking.tf  outputs.tf  provider.tf
hello-world-lambda/: README.md
hello-world-lambda/lambda/: app.py
hello-world-lambda/terraform/: lambda.tf  provider.tf
lambda-apigateway/: README.md
lambda-apigateway/lambda/: app.py
lambda-powertools-basics/: README.md
lambda-powertools-batch-processing/: Dockerfile  README.md  pyproject.toml
lambda-powertools-batch-processing/lambda/: app.py
lambda-powertools-batch-processing/terraform/: .terraform.lock.hcl  ecr.tf  iam.tf  lambda.tf  outputs.tf  provider.tf  sqs.tf
lambda-powertools-batch-processing/tests/: send_batch_events.py
lambda-powertools-idempotency/: README.md  pyproject.toml
lambda-powertools-metrics/: Dockerfile  README.md  pyproject.toml
lambda-powertools-tracer/: README.md  pyproject.toml
lambda-requests-example/: README.md  pyproject.toml
multi-resource/: compute.tf
vpc-ec2-nginx/: README.md
(+43 files in other folders)
